# Kristina

./: .gitignore  .gitmodules  LICENSE  README.md  assets  avatars  backgrounds  characters  conf.yaml  conf.yaml.backup  frontend  live2d-models  main.py  mcp_servers.json  model_dict.json  prompts  pyproject.toml  test_ollama.py  web_tool
chat_history/mao_pro_001/: 2026-02-18_00-02-14_aa4fe5b148db4073ae59f24f57011d1b.json  2026-02-18_16-29-53_cfe47019ca8c4ee8a311dadc812ecc87.json  2026-02-18_16-42-08_0b13900c75a649ef8cb29a5f2c229910.json  2026-02-18_16-44-47_06afb35f235d44569e2dcde9ed0f1c5f.json  2026-02-18_16-50-28_0b36fca7d7774801acef71379f3ddac8.json  2026-02-18_16-53-36_8200f7c4871d461aa852138aaaf261a2.json  2026-02-18_16-55-07_2d01768fea3e442a8360cf00196bc59f.json  2026-02-18_16-58-27_6d3bec04c44040bab7377193d0b638ec.json  2026-02-18_17-05-12_9859cec3ed4940cbbe5b6805c085e6e2.json  2026-02-18_17-08-16_631517020f804d6fb00182f4f4d92cce.json  2026-02-18_17-10-14_7b255d26c1a1424b80fd8855cde0836c.json  2026-02-18_19-04-29_c0dfba9d0a6041b3aa2b108964e22b0f.json  2026-02-18_20-46-12_33213fd37f03402db5fb67e1f0eb4dce.json  2026-02-18_21-08-17_cdab9600135a4e89b9b692644033d8ab.json  2026-02-18_21-19-44_79efa129be994b31b214fc0a8f904303.json  2026-02-18_21-25-27_5ed6690ea36542b0af99f0c5bd4ba8fd.json  2026-02-18_21-30-37_d28563cd4285402ab3d7af41f346e7a5.json  2026-02-18_21-32-04_b729ed3f56be412785e958312966305f.json  2026-02-18_21-50-02_32646199f94e4836b88914575d432461.json  (+5 more)
custom_agents/: powermem_agent.py
memory/: kristina_memory.py
powermem_data/: kristina_memory.db
